--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,12 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+
+body{
+  background: var(--css-Bg-color);
+}
+.c1-header{
+  background-color: var(--css-hero-bg);
 }
